2010-07-14  Marcus Bulach  <bulach@chromium.org>

Reviewed by darin@apple.com.

        Removes DontCheckEnums from some IDLs and fixes the corresponding enums.
        https://bugs.webkit.org/show_bug.cgi?id=42278

        This is a follow-up to https://bugs.webkit.org/show_bug.cgi?id=42250: it fixes some IDL/.h and enables generating compile-time checks for enums.

        * fast/events/init-events-expected.txt:
        * fast/events/script-tests/init-events.js:
        (createEventHelper): splits event creation so that we can test without init.
        (testInitEvent): adds test for OverflowEvent creation.
2010-07-14  Marcus Bulach  <bulach@chromium.org>

        Reviewed by darin@apple.com.

        Removes DontCheckEnums from some IDLs and fixes the corresponding enums.
        https://bugs.webkit.org/show_bug.cgi?id=42278

        This is a follow-up to https://bugs.webkit.org/show_bug.cgi?id=42250: it fixes some IDL/.h and enables generating compile-time checks for enums.

        Tests: idls should generate valid code.

        * dom/Node.h:
        (WebCore::Node::):
        * dom/Node.idl:
        * dom/OverflowEvent.h:
        (WebCore::OverflowEvent::):
        * dom/OverflowEvent.idl:
        * html/FileReader.cpp:
        (WebCore::FileReader::readyState):
        * html/FileReader.h:
        (WebCore::FileReader::):
        * html/FileReader.idl:

Canonical link: https://commits.webkit.org/56026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65226 268f45cc-cd09-0410-ab3c-d52691b4dbfc