WebCore/html/FileReader.h
@@ -63,9 +63,9 @@ public:
     virtual ~FileReader();
 
     enum ReadyState {
-        Empty = 0,
-        Loading = 1,
-        Done = 2
+        EMPTY = 0,
+        LOADING = 1,
+        DONE = 2
     };
 
     void readAsBinaryString(Blob*);
